# monarch-mcp-server

./: Dockerfile  login_setup.py  pyproject.toml  railway.toml
src/monarch_mcp_server/: __init__.py  secure_session.py  server.py
